--- a/src/main/resources/templates/customer/service-detail.html
+++ b/src/main/resources/templates/customer/service-detail.html
@@ -9,6 +9,117 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
+	<style>
+.snip1573 {
+  background-color: #000;
+  display: inline-block;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 16px;
+  
+  overflow: hidden;
+  position: relative;
+  text-align: center;
+  width: 100%;
+}
+
+.snip1573 * {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-transition: all 0.35s ease;
+  transition: all 0.35s ease;
+}
+
+.snip1573:before,
+.snip1573:after {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  -webkit-transition: all 0.35s ease;
+  transition: all 0.35s ease;
+  background-color: #000000;
+  border-left: 3px solid #fff;
+  border-right: 3px solid #fff;
+  content: '';
+  opacity: 0;
+  z-index: 1;
+}
+
+.snip1573:before {
+  -webkit-transform: skew(45deg) translateX(-155%);
+  transform: skew(45deg) translateX(-155%);
+}
+
+.snip1573:after {
+  -webkit-transform: skew(45deg) translateX(155%);
+  transform: skew(45deg) translateX(155%);
+}
+
+.snip1573 img {
+  backface-visibility: hidden;
+  max-width: 100%;
+  vertical-align: top;
+}
+
+.snip1573 figcaption {
+  top: 50%;
+  left: 50%;
+  position: absolute;
+  z-index: 2;
+  -webkit-transform: translate(-50%, -50%) scale(0.5);
+  transform: translate(-50%, -50%) scale(0.5);
+  opacity: 0;
+  -webkit-box-shadow: 0 0 10px #000000;
+  box-shadow: 0 0 10px #000000;
+}
+
+.snip1573 h3 {
+  background-color: #000000;
+  border: 2px solid #fff;
+  color: #fff;
+  font-size: 1em;
+  font-weight: 600;
+  letter-spacing: 1px;
+  margin: 0;
+  padding: 5px 10px;
+  text-transform: uppercase;
+}
+
+.snip1573 a {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 3;
+}
+
+.snip1573:hover > img,
+.snip1573.hover > img {
+  opacity: 0.5;
+}
+
+.snip1573:hover:before,
+.snip1573.hover:before {
+  -webkit-transform: skew(45deg) translateX(-55%);
+  transform: skew(45deg) translateX(-55%);
+}
+
+.snip1573:hover:after,
+.snip1573.hover:after {
+  -webkit-transform: skew(45deg) translateX(55%);
+  transform: skew(45deg) translateX(55%);
+}
+
+.snip1573:hover figcaption,
+.snip1573.hover figcaption {
+  -webkit-transform: translate(-50%, -50%) scale(1);
+  transform: translate(-50%, -50%) scale(1);
+  opacity: 1;
+}
+
+	</style>
 </head>
 
 <body itemscope>
@@ -43,6 +154,9 @@
 									<div role="tabpanel" class="tab-pane fade in active" id="service-image1">
 										<img th:src="@{'/getanh/' +${item.id}}" height="415" width="620" alt="" />
 									</div>
+									
+									
+									
 									<div class="service-info" >
 										<div class="service-info-center">
 											<span>The Best</span>
@@ -56,22 +170,71 @@
 								
 								</div>
 								<ul class="nav nav-tabs">
-									<li  class="active">
-										<a href="#service-image1" data-toggle="tab"><img th:src="@{/images/resource/service-thumb1.jpg}" alt="" /></a>
+									<li class="active" style="float: left; margin-top: 20px">
+										<h6>Dịch vụ  </h6> 
+										<h6>Khác :</h6>
+										
 									</li>
-									<li>
-										<a href="#service-image2" data-toggle="tab"><img th:src="@{/images/resource/service-thumb2.jpg}" alt="" /></a>
-									</li>
-									<li>
-										<a href="#service-image3" data-toggle="tab"><img th:src="@{/images/resource/service-thumb3.jpg}" alt="" /></a>
-									</li>
-									<li>
-										<a href="#service-image4" data-toggle="tab"><img th:src="@{/images/resource/service-thumb4.jpg}" alt="" /></a>
-									</li>
-									<li>
-										<a href="#service-image5" data-toggle="tab"><img th:src="@{/images/resource/service-thumb5.jpg}" alt="" /></a>
-									</li>
+											<li class="active">
+												<figure class="snip1573">
+													<img
+														th:src="@{/images/resource/sv5.jpg}"
+														width="110px" height="110px" alt="sample89" />
+													<figcaption>
+														<h3>Fitness</h3>
+													</figcaption>
+													<a th:href="@{'/view/profiles/' + '5'}"></a>
+												</figure>
+											</li>
+											<li class="active">
+												<figure class="snip1573">
+													<img
+														th:src="@{/images/resource/casino.jpg}" 
+														width="110px" height="110px" alt="sample89" />
+													<figcaption>
+														<h3>Casino</h3>
+													</figcaption>
+													<a th:href="@{'/view/profiles/' + '7'}"></a>
+												</figure>
+											</li>
+											<li class="active">
+												<figure class="snip1573">
+													<img
+														th:src="@{/images/resource/sv4.jpeg}"
+														width="110px" height="110px" alt="sample89" />
+													<figcaption>
+														<h3>Carental</h3>
+													</figcaption>
+													<a th:href="@{'/view/profiles/' + '3'}"></a>
+												</figure>
+											</li>
+											<li class="active">
+												<figure class="snip1573">
+													<img
+														th:src="@{/images/resource/bar.png}"
+														width="110px" height="110px" alt="sample89" />
+													<figcaption>
+														<h3>Bar</h3>
+													</figcaption>
+													<a th:href="@{'/view/profiles/' + '15'}"></a>
+												</figure>
+											</li>
+											<li class="active">
+												<figure class="snip1573">
+													<img
+														th:src="@{/images/resource/service-thumb5.jpg}"
+														width="110px" height="110px" alt="sample89" />
+													<figcaption>
+														<h3>Meal</h3>
+													</figcaption>
+													<a th:href="@{'/view/profiles/' + '2'}"></a>
+												</figure>
+											</li>
+									
+									
 								</ul>
+								
+								
 								
 							</div><!-- Service Image Tabs -->
 							<h2>Service Description</h2>
