--- a/src/main/resources/templates/layouts/admin.html
+++ b/src/main/resources/templates/layouts/admin.html
@@ -1,31 +1,29 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+
 <head>
-    <meta charset="utf-8">
-<title>Hotel Manager</title>
-<th:block layout:fragment="css">
-        <link rel="icon" th:href="@{/images/favicon.ico}" sizes="16x16">
-        </th:block>
-
-
-<link rel="stylesheet" href="css/style.css">
-<link rel="stylesheet"
-	href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
-<!-- Bootstrap CSS -->
-<link rel="stylesheet"
-	href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-	integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-	crossorigin="anonymous">
+	<meta charset="utf-8">
+	<title>Hotel Manager</title>
 	<th:block layout:fragment="css">
-	
-	<link rel="stylesheet" type="text/css" th:href="@{/css/admin.css}" />
-	
-</th:block>
+		<link rel="icon" th:href="@{/images/favicon.ico}" sizes="16x16">
+	</th:block>
+
+
+	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
+	<!-- Bootstrap CSS -->
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	<th:block layout:fragment="css">
+
+		<link rel="stylesheet" type="text/css" th:href="@{/css/admin.css}" />
+
+
+	</th:block>
 </head>
 
 <body class="hold-transition sidebar-mini layout-fixed">
-<header>
+	<header>
 		<div class="container">
 			<div class="logo-sec">
 				<a th:href="@{/}"><img th:src="@{/images/logo.png}" alt="" /></a>
@@ -33,97 +31,171 @@
 
 			<!-- logo -->
 			<nav>
-				<a class="responsive-menu-btn" href="#" title=""><i
-					class="fa fa-align-justify"></i></a>
+				<a class="responsive-menu-btn" href="#" title=""><i class="fa fa-align-justify"></i></a>
 				<ul>
-					<li  class="menu-item-has-children"><a th:href="@{/users/}"
-						>Tài Khoản</a></li>
-					<li class="menu-item-has-children"><a th:href="@{/citys/}" >Thành Phố</a></li>
-					
-					<li class="menu-item-has-children"><a href="#" title=""
-						>Quản Lý Khách Sạn</a>
+					<li class="menu-item-has-children"><a th:href="@{/users/}">Tài Khoản</a></li>
+					<li class="menu-item-has-children"><a th:href="@{/citys/}">Thành Phố</a></li>
+
+					<li class="menu-item-has-children"><a href="#" title="">Quản Lý Khách Sạn</a>
 						<ul>
 							<li><a th:href="@{/hotels/}">Khách Sạn</a></li>
 							<li><a th:href="@{/types/}">Loại Khách Sạn</a></li>
-							<li><a th:href="@{/rooms/}" >Phòng</a></li>
-						</ul></li>
+							<li><a th:href="@{/rooms/}">Phòng</a></li>
+						</ul>
+					</li>
 					<li class="menu-item-has-children"><a th:href="@{/services/}">Dịch Vụ</a></li>
-					<li class="menu-item-has-children"><a href="404NotFound/404.html" >Thống Kê</a></li>
+					<li class="menu-item-has-children"><a href="#" title="">Thống Kê</a>
+						<ul>
+							<li><a th:href="@{/thongke/ThongKeTheoNgay}">Thống kê theo ngày</a></li>
+							<li><a th:href="@{/thongke/ThongKeTheoThang}">Thống kê theo tháng</a></li>
+						</ul>
+					</li>
 				</ul>
 			</nav>
 		</div>
 	</header>
-<div class="wrapper">
-			
-			
-    <!-- Navbar -->
-    <nav class="main-header navbar navbar-expand navbar-white navbar-light">
-        <!-- Left navbar links -->
-        
-        
+	<div class="wrapper">
 
-        <!-- Right navbar links -->
-        
-    </nav>
-    
-    
-		  <!-- Content Wrapper. Contains page content -->
-    <div class="content-wrapper">
+
+		<!-- Navbar -->
+		<nav class="main-header navbar navbar-expand navbar-white navbar-light">
+			<!-- Left navbar links -->
+
+
+
+			<!-- Right navbar links -->
+
+		</nav>
+
+
+		<!-- Content Wrapper. Contains page content -->
+		<div class="content-wrapper">
 			<div layout:fragment="header"></div>
 			<!-- Main content -->
-        <section class="content">
-            <div class="container-fluid">
-                <!-- Small boxes (Stat box) -->
-                <div layout:fragment="content">
-                </div>
-                <!-- /.row -->
-                <!-- Main row -->
-                <!-- /.row (main row) -->
-           <!-- /.container-fluid -->
-           </div>
-        </section>
-        <!-- /.content -->
-        
-    </div>
-    <!-- /.content-wrapper -->
-    <footer class="main-footer">
-     <div class="container-fluid">
-        <div class="card text-center" style="background-color:#00ff99;">
-			<div class="card-body"></div>
-			<p class="card-text" style="margin-bottom: 10px;">Phát triển bởi nhóm Booking Hotel</p>
-			<p class="card-text" style="margin-bottom: 10px;">FPT Polytechnic
-				Đà Nẵng © 2020. All rights reserved</p>
+			<section class="content">
+				<div class="container-fluid">
+
+					<!-- Small boxes (Stat box) -->
+					<div layout:fragment="content">
+
+					</div>
+					<!-- /.row -->
+					<!-- Main row -->
+					<!-- /.row (main row) -->
+					<!-- /.container-fluid -->
+				</div>
+			</section>
+			<!-- /.content -->
+
 		</div>
+		<!-- /.content-wrapper -->
+		<footer class="main-footer">
+			<div class="container-fluid">
+				<div class="card text-center" style="background-color:#00ff99;">
+					<div class="card-body"></div>
+					<p class="card-text" style="margin-bottom: 10px;">Phát triển bởi nhóm Booking Hotel</p>
+					<p class="card-text" style="margin-bottom: 10px;">FPT Polytechnic
+						Đà Nẵng © 2020. All rights reserved</p>
+				</div>
+			</div>
+		</footer>
+
+		<!--Chat box-->
+		<div id="chat-circle" class="btn btn-raised">
+			<div id="chat-overlay"></div>
+				<i class="material-icons"><img src="/images/chat-bubble.png" alt=""></i>
 		</div>
-    </footer>
-    
-    
-    
-    
- 
-    </div>
+	  
+	  <div class="chat-box">
+		<div class="chat-box-header">
+		  ChatBot
+		  <span class="chat-box-toggle"><i class="material-icons">close</i></span>
+		</div>
+		<div class="chat-box-body">
+		  <div class="chat-box-overlay">  
+
+		  </div>
+		  <div class="chat-logs">
+			<div id="username-page">
+				<div class="username-page-container">
+					<h3 class="title">Enter your username</h3>
+					<form id="usernameForm" name="usernameForm">
+						<div class="form-group">
+							<input type="text" id="name" placeholder="Username" autocomplete="off" class="form-control" />
+						</div>
+						<div class="form-group">
+							<button type="submit" class="accent username-submit">Start Chatting</button>
+						</div>
+					</form>
+				</div>
+			</div>
+		
+			<div id="chat-page" class="hidden">
+				<div class="chat-container">
+					<div class="chat-header text-center">
+						<h3>Start Chat Application</h3>
+					</div>
+					<div class="connecting">
+						Connecting...
+					</div>
+					<ul id="messageArea">
+		
+					</ul>
+					<form id="messageForm" name="messageForm">
+						<div class="form-group">
+							<div class="input-group clearfix">
+								<input type="text" id="message" placeholder="Type a message..." autocomplete="off" class="form-control"/>
+								<button type="submit" class="primary">Send</button>
+							</div>
+						</div>
+					</form>
+				</div>
+			</div>
+		  </div><!--chat-log -->
+		</div>
+		
+	  </div>
+
+
+
+	</div>
 
 
 	<!-- Optional JavaScript -->
 	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-		crossorigin="anonymous">
-		
+		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+
 	</script>
-	<script
-		src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-		integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-		crossorigin="anonymous">
-		
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+		integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+
 	</script>
-	<script
-		src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-		integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-		crossorigin="anonymous">
-		
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+		integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+
 	</script>
 
-<th:block layout:fragment="js"></th:block>
+	<th:block layout:fragment="js">
+		<script th:src="@{/js/main.js}" type="text/javascript"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.1.4/sockjs.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
+		<script>
+			$(function () {
+				var INDEX = 0;
+				$("#chat-circle").click(function () {
+					$("#chat-circle").toggle('scale');
+					$(".chat-box").toggle('scale');
+				})
+
+				$(".chat-box-toggle").click(function () {
+					$("#chat-circle").toggle('scale');
+					$(".chat-box").toggle('scale');
+				})
+
+			})
+		</script>
+	</th:block>
 </body>
+
 </html>
