--- a/src/main/resources/templates/rooms/dsPhong.html
+++ b/src/main/resources/templates/rooms/dsPhong.html
@@ -95,7 +95,7 @@
 											</div>
 										</div>
 										<div class="form-group row">
-											<label class="col-sm-3 col-form-label"> Diện tích</label>
+											<label class="col-sm-3 col-form-label">Số lượng</label>
 											<div class="col-sm-9">
 												<input type="number" class="form-control"
 													th:field="*{soluong}" placeholder="Số lượng...">
@@ -180,6 +180,7 @@
 						<tr>
 							<th>Tên</th>
 							<th>Diện Tích</th>
+							<th>Số lượng phòng</th>
 							<th>Giá Thuê</th>
 							<th>Tiện Nghi</th>
 							<th>Loại Giường</th>
@@ -195,7 +196,8 @@
 
 							<td th:text="${item.ten}"></td>
 							<td th:text="${item.dientich}+ 'm'"></td>
-							<td th:text="${item.giathue} + ' VNÄ'"></td>
+							<td th:text="${item.soluong}"></td>
+							<td th:text="${item.giathue} + '$'"></td>
 							<td th:text="${item.tiennghi}"></td>
 							<td><span
 								th:text="${item.loaigiuong} ? 'Giường Đơn':'Giường Đôi'"></span></td>
@@ -215,12 +217,10 @@
 							</td>
 
 						</tr>
-
 					</tbody>
 				</table>
 
 				<div class="card-footer">
-				
 					<nav aria-label="Contacts Page Navigation" th:if="${rooms.totalPages}">
                         <ul class="pagination justify-content-center m-0">
                             <li th:class="${rooms.number == 0}?'disabled page-item':'page-item'">
@@ -250,7 +250,7 @@
                             </li>
                         </ul>
                         </nav>
-				</div>
+				</div>				
 			</div>
 		</article>
 	</div>
